parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ESPACIO

Grammar

Rule 0     S' -> program
Rule 1     program -> block
Rule 2     block -> constDec1 varDec1 procDec1 statement
Rule 3     constDec1 -> DR constAssignmentList PUNTOCOMA
Rule 4     constDec1 -> empty
Rule 5     constAssignmentList -> ID ACTUALI NUMERO
Rule 6     constAssignmentList -> constAssignmentList COMA constAssignmentList
Rule 7     varDec1 -> METRO identList PUNTOCOMA
Rule 8     varDec1 -> empty
Rule 9     identList -> ID
Rule 10    identList -> ID ACTUALI NUMERO
Rule 11    identList -> identList COMA identList
Rule 12    procDec1 -> procDec1 MOP ID PUNTOCOMA block PUNTOCOMA
Rule 13    procDec1 -> empty
Rule 14    statement -> HF statementList GG
Rule 15    statement -> ID ACTUALI expression PUNTOCOMA
Rule 16    statement -> KNT STRING PUNTOCOMA
Rule 17    statement -> YF condition LLAVEI statement LLAVED
Rule 18    statement -> YF condition LLAVEI statement LLAVED WOLAN LLAVEI statement LLAVED
Rule 19    statement -> MIENTRAS condition LLAVEI statement LLAVED
Rule 20    statement -> empty
Rule 21    statementList -> statement
Rule 22    statementList -> statementList statementList
Rule 23    condition -> IMPAR expression
Rule 24    condition -> expression relation expression
Rule 25    relation -> IGUAL
Rule 26    relation -> DISTINTO
Rule 27    relation -> MENOR
Rule 28    relation -> MAYOR
Rule 29    relation -> MENORI
Rule 30    relation -> MAYORI
Rule 31    expression -> term
Rule 32    expression -> addingOperator term
Rule 33    expression -> expression addingOperator term
Rule 34    addingOperator -> SUMA
Rule 35    addingOperator -> MENOS
Rule 36    term -> factor
Rule 37    term -> term multiplyingOperator factor
Rule 38    multiplyingOperator -> MULTI
Rule 39    multiplyingOperator -> DIVIDIR
Rule 40    factor -> ID
Rule 41    factor -> NUMERO
Rule 42    factor -> PARENTI expression PARENTD
Rule 43    factor -> STRING
Rule 44    empty -> <empty>

Terminals, with rules where they appear

ACTUALI              : 5 10 15
COMA                 : 6 11
DISTINTO             : 26
DIVIDIR              : 39
DR                   : 3
ESPACIO              : 
GG                   : 14
HF                   : 14
ID                   : 5 9 10 12 15 40
IGUAL                : 25
IMPAR                : 23
KNT                  : 16
LLAVED               : 17 18 18 19
LLAVEI               : 17 18 18 19
MAYOR                : 28
MAYORI               : 30
MENOR                : 27
MENORI               : 29
MENOS                : 35
METRO                : 7
MIENTRAS             : 19
MOP                  : 12
MULTI                : 38
NUMERO               : 5 10 41
PARENTD              : 42
PARENTI              : 42
PUNTOCOMA            : 3 7 12 12 15 16
STRING               : 16 43
SUMA                 : 34
WOLAN                : 18
YF                   : 17 18
error                : 

Nonterminals, with rules where they appear

addingOperator       : 32 33
block                : 1 12
condition            : 17 18 19
constAssignmentList  : 3 6 6
constDec1            : 2
empty                : 4 8 13 20
expression           : 15 23 24 24 33 42
factor               : 36 37
identList            : 7 11 11
multiplyingOperator  : 37
procDec1             : 2 12
program              : 0
relation             : 24
statement            : 2 17 18 18 19 21
statementList        : 14 22 22
term                 : 31 32 33 37
varDec1              : 2

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . block
    (2) block -> . constDec1 varDec1 procDec1 statement
    (3) constDec1 -> . DR constAssignmentList PUNTOCOMA
    (4) constDec1 -> . empty
    (44) empty -> .

    DR              shift and go to state 4
    METRO           reduce using rule 44 (empty -> .)
    MOP             reduce using rule 44 (empty -> .)
    HF              reduce using rule 44 (empty -> .)
    ID              reduce using rule 44 (empty -> .)
    KNT             reduce using rule 44 (empty -> .)
    YF              reduce using rule 44 (empty -> .)
    MIENTRAS        reduce using rule 44 (empty -> .)
    $end            reduce using rule 44 (empty -> .)

    program                        shift and go to state 1
    block                          shift and go to state 2
    constDec1                      shift and go to state 3
    empty                          shift and go to state 5

state 1

    (0) S' -> program .



state 2

    (1) program -> block .

    $end            reduce using rule 1 (program -> block .)


state 3

    (2) block -> constDec1 . varDec1 procDec1 statement
    (7) varDec1 -> . METRO identList PUNTOCOMA
    (8) varDec1 -> . empty
    (44) empty -> .

    METRO           shift and go to state 7
    MOP             reduce using rule 44 (empty -> .)
    HF              reduce using rule 44 (empty -> .)
    ID              reduce using rule 44 (empty -> .)
    KNT             reduce using rule 44 (empty -> .)
    YF              reduce using rule 44 (empty -> .)
    MIENTRAS        reduce using rule 44 (empty -> .)
    $end            reduce using rule 44 (empty -> .)
    PUNTOCOMA       reduce using rule 44 (empty -> .)

    varDec1                        shift and go to state 6
    empty                          shift and go to state 8

state 4

    (3) constDec1 -> DR . constAssignmentList PUNTOCOMA
    (5) constAssignmentList -> . ID ACTUALI NUMERO
    (6) constAssignmentList -> . constAssignmentList COMA constAssignmentList

    ID              shift and go to state 10

    constAssignmentList            shift and go to state 9

state 5

    (4) constDec1 -> empty .

    METRO           reduce using rule 4 (constDec1 -> empty .)
    MOP             reduce using rule 4 (constDec1 -> empty .)
    HF              reduce using rule 4 (constDec1 -> empty .)
    ID              reduce using rule 4 (constDec1 -> empty .)
    KNT             reduce using rule 4 (constDec1 -> empty .)
    YF              reduce using rule 4 (constDec1 -> empty .)
    MIENTRAS        reduce using rule 4 (constDec1 -> empty .)
    $end            reduce using rule 4 (constDec1 -> empty .)
    PUNTOCOMA       reduce using rule 4 (constDec1 -> empty .)


state 6

    (2) block -> constDec1 varDec1 . procDec1 statement
    (12) procDec1 -> . procDec1 MOP ID PUNTOCOMA block PUNTOCOMA
    (13) procDec1 -> . empty
    (44) empty -> .

    MOP             reduce using rule 44 (empty -> .)
    HF              reduce using rule 44 (empty -> .)
    ID              reduce using rule 44 (empty -> .)
    KNT             reduce using rule 44 (empty -> .)
    YF              reduce using rule 44 (empty -> .)
    MIENTRAS        reduce using rule 44 (empty -> .)
    $end            reduce using rule 44 (empty -> .)
    PUNTOCOMA       reduce using rule 44 (empty -> .)

    procDec1                       shift and go to state 11
    empty                          shift and go to state 12

state 7

    (7) varDec1 -> METRO . identList PUNTOCOMA
    (9) identList -> . ID
    (10) identList -> . ID ACTUALI NUMERO
    (11) identList -> . identList COMA identList

    ID              shift and go to state 14

    identList                      shift and go to state 13

state 8

    (8) varDec1 -> empty .

    MOP             reduce using rule 8 (varDec1 -> empty .)
    HF              reduce using rule 8 (varDec1 -> empty .)
    ID              reduce using rule 8 (varDec1 -> empty .)
    KNT             reduce using rule 8 (varDec1 -> empty .)
    YF              reduce using rule 8 (varDec1 -> empty .)
    MIENTRAS        reduce using rule 8 (varDec1 -> empty .)
    $end            reduce using rule 8 (varDec1 -> empty .)
    PUNTOCOMA       reduce using rule 8 (varDec1 -> empty .)


state 9

    (3) constDec1 -> DR constAssignmentList . PUNTOCOMA
    (6) constAssignmentList -> constAssignmentList . COMA constAssignmentList

    PUNTOCOMA       shift and go to state 15
    COMA            shift and go to state 16


state 10

    (5) constAssignmentList -> ID . ACTUALI NUMERO

    ACTUALI         shift and go to state 17


state 11

    (2) block -> constDec1 varDec1 procDec1 . statement
    (12) procDec1 -> procDec1 . MOP ID PUNTOCOMA block PUNTOCOMA
    (14) statement -> . HF statementList GG
    (15) statement -> . ID ACTUALI expression PUNTOCOMA
    (16) statement -> . KNT STRING PUNTOCOMA
    (17) statement -> . YF condition LLAVEI statement LLAVED
    (18) statement -> . YF condition LLAVEI statement LLAVED WOLAN LLAVEI statement LLAVED
    (19) statement -> . MIENTRAS condition LLAVEI statement LLAVED
    (20) statement -> . empty
    (44) empty -> .

    MOP             shift and go to state 19
    HF              shift and go to state 21
    ID              shift and go to state 20
    KNT             shift and go to state 22
    YF              shift and go to state 23
    MIENTRAS        shift and go to state 24
    $end            reduce using rule 44 (empty -> .)
    PUNTOCOMA       reduce using rule 44 (empty -> .)

    statement                      shift and go to state 18
    empty                          shift and go to state 25

state 12

    (13) procDec1 -> empty .

    MOP             reduce using rule 13 (procDec1 -> empty .)
    HF              reduce using rule 13 (procDec1 -> empty .)
    ID              reduce using rule 13 (procDec1 -> empty .)
    KNT             reduce using rule 13 (procDec1 -> empty .)
    YF              reduce using rule 13 (procDec1 -> empty .)
    MIENTRAS        reduce using rule 13 (procDec1 -> empty .)
    $end            reduce using rule 13 (procDec1 -> empty .)
    PUNTOCOMA       reduce using rule 13 (procDec1 -> empty .)


state 13

    (7) varDec1 -> METRO identList . PUNTOCOMA
    (11) identList -> identList . COMA identList

    PUNTOCOMA       shift and go to state 26
    COMA            shift and go to state 27


state 14

    (9) identList -> ID .
    (10) identList -> ID . ACTUALI NUMERO

    PUNTOCOMA       reduce using rule 9 (identList -> ID .)
    COMA            reduce using rule 9 (identList -> ID .)
    ACTUALI         shift and go to state 28


state 15

    (3) constDec1 -> DR constAssignmentList PUNTOCOMA .

    METRO           reduce using rule 3 (constDec1 -> DR constAssignmentList PUNTOCOMA .)
    MOP             reduce using rule 3 (constDec1 -> DR constAssignmentList PUNTOCOMA .)
    HF              reduce using rule 3 (constDec1 -> DR constAssignmentList PUNTOCOMA .)
    ID              reduce using rule 3 (constDec1 -> DR constAssignmentList PUNTOCOMA .)
    KNT             reduce using rule 3 (constDec1 -> DR constAssignmentList PUNTOCOMA .)
    YF              reduce using rule 3 (constDec1 -> DR constAssignmentList PUNTOCOMA .)
    MIENTRAS        reduce using rule 3 (constDec1 -> DR constAssignmentList PUNTOCOMA .)
    $end            reduce using rule 3 (constDec1 -> DR constAssignmentList PUNTOCOMA .)
    PUNTOCOMA       reduce using rule 3 (constDec1 -> DR constAssignmentList PUNTOCOMA .)


state 16

    (6) constAssignmentList -> constAssignmentList COMA . constAssignmentList
    (5) constAssignmentList -> . ID ACTUALI NUMERO
    (6) constAssignmentList -> . constAssignmentList COMA constAssignmentList

    ID              shift and go to state 10

    constAssignmentList            shift and go to state 29

state 17

    (5) constAssignmentList -> ID ACTUALI . NUMERO

    NUMERO          shift and go to state 30


state 18

    (2) block -> constDec1 varDec1 procDec1 statement .

    $end            reduce using rule 2 (block -> constDec1 varDec1 procDec1 statement .)
    PUNTOCOMA       reduce using rule 2 (block -> constDec1 varDec1 procDec1 statement .)


state 19

    (12) procDec1 -> procDec1 MOP . ID PUNTOCOMA block PUNTOCOMA

    ID              shift and go to state 31


state 20

    (15) statement -> ID . ACTUALI expression PUNTOCOMA

    ACTUALI         shift and go to state 32


state 21

    (14) statement -> HF . statementList GG
    (21) statementList -> . statement
    (22) statementList -> . statementList statementList
    (14) statement -> . HF statementList GG
    (15) statement -> . ID ACTUALI expression PUNTOCOMA
    (16) statement -> . KNT STRING PUNTOCOMA
    (17) statement -> . YF condition LLAVEI statement LLAVED
    (18) statement -> . YF condition LLAVEI statement LLAVED WOLAN LLAVEI statement LLAVED
    (19) statement -> . MIENTRAS condition LLAVEI statement LLAVED
    (20) statement -> . empty
    (44) empty -> .

  ! shift/reduce conflict for HF resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for KNT resolved as shift
  ! shift/reduce conflict for YF resolved as shift
  ! shift/reduce conflict for MIENTRAS resolved as shift
    HF              shift and go to state 21
    ID              shift and go to state 20
    KNT             shift and go to state 22
    YF              shift and go to state 23
    MIENTRAS        shift and go to state 24
    GG              reduce using rule 44 (empty -> .)

  ! HF              [ reduce using rule 44 (empty -> .) ]
  ! ID              [ reduce using rule 44 (empty -> .) ]
  ! KNT             [ reduce using rule 44 (empty -> .) ]
  ! YF              [ reduce using rule 44 (empty -> .) ]
  ! MIENTRAS        [ reduce using rule 44 (empty -> .) ]

    statementList                  shift and go to state 33
    statement                      shift and go to state 34
    empty                          shift and go to state 25

state 22

    (16) statement -> KNT . STRING PUNTOCOMA

    STRING          shift and go to state 35


state 23

    (17) statement -> YF . condition LLAVEI statement LLAVED
    (18) statement -> YF . condition LLAVEI statement LLAVED WOLAN LLAVEI statement LLAVED
    (23) condition -> . IMPAR expression
    (24) condition -> . expression relation expression
    (31) expression -> . term
    (32) expression -> . addingOperator term
    (33) expression -> . expression addingOperator term
    (36) term -> . factor
    (37) term -> . term multiplyingOperator factor
    (34) addingOperator -> . SUMA
    (35) addingOperator -> . MENOS
    (40) factor -> . ID
    (41) factor -> . NUMERO
    (42) factor -> . PARENTI expression PARENTD
    (43) factor -> . STRING

    IMPAR           shift and go to state 37
    SUMA            shift and go to state 42
    MENOS           shift and go to state 43
    ID              shift and go to state 44
    NUMERO          shift and go to state 45
    PARENTI         shift and go to state 46
    STRING          shift and go to state 47

    condition                      shift and go to state 36
    expression                     shift and go to state 38
    term                           shift and go to state 39
    addingOperator                 shift and go to state 40
    factor                         shift and go to state 41

state 24

    (19) statement -> MIENTRAS . condition LLAVEI statement LLAVED
    (23) condition -> . IMPAR expression
    (24) condition -> . expression relation expression
    (31) expression -> . term
    (32) expression -> . addingOperator term
    (33) expression -> . expression addingOperator term
    (36) term -> . factor
    (37) term -> . term multiplyingOperator factor
    (34) addingOperator -> . SUMA
    (35) addingOperator -> . MENOS
    (40) factor -> . ID
    (41) factor -> . NUMERO
    (42) factor -> . PARENTI expression PARENTD
    (43) factor -> . STRING

    IMPAR           shift and go to state 37
    SUMA            shift and go to state 42
    MENOS           shift and go to state 43
    ID              shift and go to state 44
    NUMERO          shift and go to state 45
    PARENTI         shift and go to state 46
    STRING          shift and go to state 47

    condition                      shift and go to state 48
    expression                     shift and go to state 38
    term                           shift and go to state 39
    addingOperator                 shift and go to state 40
    factor                         shift and go to state 41

state 25

    (20) statement -> empty .

    $end            reduce using rule 20 (statement -> empty .)
    PUNTOCOMA       reduce using rule 20 (statement -> empty .)
    GG              reduce using rule 20 (statement -> empty .)
    HF              reduce using rule 20 (statement -> empty .)
    ID              reduce using rule 20 (statement -> empty .)
    KNT             reduce using rule 20 (statement -> empty .)
    YF              reduce using rule 20 (statement -> empty .)
    MIENTRAS        reduce using rule 20 (statement -> empty .)
    LLAVED          reduce using rule 20 (statement -> empty .)


state 26

    (7) varDec1 -> METRO identList PUNTOCOMA .

    MOP             reduce using rule 7 (varDec1 -> METRO identList PUNTOCOMA .)
    HF              reduce using rule 7 (varDec1 -> METRO identList PUNTOCOMA .)
    ID              reduce using rule 7 (varDec1 -> METRO identList PUNTOCOMA .)
    KNT             reduce using rule 7 (varDec1 -> METRO identList PUNTOCOMA .)
    YF              reduce using rule 7 (varDec1 -> METRO identList PUNTOCOMA .)
    MIENTRAS        reduce using rule 7 (varDec1 -> METRO identList PUNTOCOMA .)
    $end            reduce using rule 7 (varDec1 -> METRO identList PUNTOCOMA .)
    PUNTOCOMA       reduce using rule 7 (varDec1 -> METRO identList PUNTOCOMA .)


state 27

    (11) identList -> identList COMA . identList
    (9) identList -> . ID
    (10) identList -> . ID ACTUALI NUMERO
    (11) identList -> . identList COMA identList

    ID              shift and go to state 14

    identList                      shift and go to state 49

state 28

    (10) identList -> ID ACTUALI . NUMERO

    NUMERO          shift and go to state 50


state 29

    (6) constAssignmentList -> constAssignmentList COMA constAssignmentList .
    (6) constAssignmentList -> constAssignmentList . COMA constAssignmentList

  ! shift/reduce conflict for COMA resolved as shift
    PUNTOCOMA       reduce using rule 6 (constAssignmentList -> constAssignmentList COMA constAssignmentList .)
    COMA            shift and go to state 16

  ! COMA            [ reduce using rule 6 (constAssignmentList -> constAssignmentList COMA constAssignmentList .) ]


state 30

    (5) constAssignmentList -> ID ACTUALI NUMERO .

    PUNTOCOMA       reduce using rule 5 (constAssignmentList -> ID ACTUALI NUMERO .)
    COMA            reduce using rule 5 (constAssignmentList -> ID ACTUALI NUMERO .)


state 31

    (12) procDec1 -> procDec1 MOP ID . PUNTOCOMA block PUNTOCOMA

    PUNTOCOMA       shift and go to state 51


state 32

    (15) statement -> ID ACTUALI . expression PUNTOCOMA
    (31) expression -> . term
    (32) expression -> . addingOperator term
    (33) expression -> . expression addingOperator term
    (36) term -> . factor
    (37) term -> . term multiplyingOperator factor
    (34) addingOperator -> . SUMA
    (35) addingOperator -> . MENOS
    (40) factor -> . ID
    (41) factor -> . NUMERO
    (42) factor -> . PARENTI expression PARENTD
    (43) factor -> . STRING

    SUMA            shift and go to state 42
    MENOS           shift and go to state 43
    ID              shift and go to state 44
    NUMERO          shift and go to state 45
    PARENTI         shift and go to state 46
    STRING          shift and go to state 47

    expression                     shift and go to state 52
    term                           shift and go to state 39
    addingOperator                 shift and go to state 40
    factor                         shift and go to state 41

state 33

    (14) statement -> HF statementList . GG
    (22) statementList -> statementList . statementList
    (21) statementList -> . statement
    (22) statementList -> . statementList statementList
    (14) statement -> . HF statementList GG
    (15) statement -> . ID ACTUALI expression PUNTOCOMA
    (16) statement -> . KNT STRING PUNTOCOMA
    (17) statement -> . YF condition LLAVEI statement LLAVED
    (18) statement -> . YF condition LLAVEI statement LLAVED WOLAN LLAVEI statement LLAVED
    (19) statement -> . MIENTRAS condition LLAVEI statement LLAVED
    (20) statement -> . empty
    (44) empty -> .

  ! shift/reduce conflict for HF resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for KNT resolved as shift
  ! shift/reduce conflict for YF resolved as shift
  ! shift/reduce conflict for MIENTRAS resolved as shift
  ! shift/reduce conflict for GG resolved as shift
    GG              shift and go to state 54
    HF              shift and go to state 21
    ID              shift and go to state 20
    KNT             shift and go to state 22
    YF              shift and go to state 23
    MIENTRAS        shift and go to state 24

  ! HF              [ reduce using rule 44 (empty -> .) ]
  ! ID              [ reduce using rule 44 (empty -> .) ]
  ! KNT             [ reduce using rule 44 (empty -> .) ]
  ! YF              [ reduce using rule 44 (empty -> .) ]
  ! MIENTRAS        [ reduce using rule 44 (empty -> .) ]
  ! GG              [ reduce using rule 44 (empty -> .) ]

    statementList                  shift and go to state 53
    statement                      shift and go to state 34
    empty                          shift and go to state 25

state 34

    (21) statementList -> statement .

    GG              reduce using rule 21 (statementList -> statement .)
    HF              reduce using rule 21 (statementList -> statement .)
    ID              reduce using rule 21 (statementList -> statement .)
    KNT             reduce using rule 21 (statementList -> statement .)
    YF              reduce using rule 21 (statementList -> statement .)
    MIENTRAS        reduce using rule 21 (statementList -> statement .)


state 35

    (16) statement -> KNT STRING . PUNTOCOMA

    PUNTOCOMA       shift and go to state 55


state 36

    (17) statement -> YF condition . LLAVEI statement LLAVED
    (18) statement -> YF condition . LLAVEI statement LLAVED WOLAN LLAVEI statement LLAVED

    LLAVEI          shift and go to state 56


state 37

    (23) condition -> IMPAR . expression
    (31) expression -> . term
    (32) expression -> . addingOperator term
    (33) expression -> . expression addingOperator term
    (36) term -> . factor
    (37) term -> . term multiplyingOperator factor
    (34) addingOperator -> . SUMA
    (35) addingOperator -> . MENOS
    (40) factor -> . ID
    (41) factor -> . NUMERO
    (42) factor -> . PARENTI expression PARENTD
    (43) factor -> . STRING

    SUMA            shift and go to state 42
    MENOS           shift and go to state 43
    ID              shift and go to state 44
    NUMERO          shift and go to state 45
    PARENTI         shift and go to state 46
    STRING          shift and go to state 47

    expression                     shift and go to state 57
    term                           shift and go to state 39
    addingOperator                 shift and go to state 40
    factor                         shift and go to state 41

state 38

    (24) condition -> expression . relation expression
    (33) expression -> expression . addingOperator term
    (25) relation -> . IGUAL
    (26) relation -> . DISTINTO
    (27) relation -> . MENOR
    (28) relation -> . MAYOR
    (29) relation -> . MENORI
    (30) relation -> . MAYORI
    (34) addingOperator -> . SUMA
    (35) addingOperator -> . MENOS

    IGUAL           shift and go to state 60
    DISTINTO        shift and go to state 61
    MENOR           shift and go to state 62
    MAYOR           shift and go to state 63
    MENORI          shift and go to state 64
    MAYORI          shift and go to state 65
    SUMA            shift and go to state 42
    MENOS           shift and go to state 43

    relation                       shift and go to state 58
    addingOperator                 shift and go to state 59

state 39

    (31) expression -> term .
    (37) term -> term . multiplyingOperator factor
    (38) multiplyingOperator -> . MULTI
    (39) multiplyingOperator -> . DIVIDIR

    IGUAL           reduce using rule 31 (expression -> term .)
    DISTINTO        reduce using rule 31 (expression -> term .)
    MENOR           reduce using rule 31 (expression -> term .)
    MAYOR           reduce using rule 31 (expression -> term .)
    MENORI          reduce using rule 31 (expression -> term .)
    MAYORI          reduce using rule 31 (expression -> term .)
    SUMA            reduce using rule 31 (expression -> term .)
    MENOS           reduce using rule 31 (expression -> term .)
    PUNTOCOMA       reduce using rule 31 (expression -> term .)
    LLAVEI          reduce using rule 31 (expression -> term .)
    PARENTD         reduce using rule 31 (expression -> term .)
    MULTI           shift and go to state 67
    DIVIDIR         shift and go to state 68

    multiplyingOperator            shift and go to state 66

state 40

    (32) expression -> addingOperator . term
    (36) term -> . factor
    (37) term -> . term multiplyingOperator factor
    (40) factor -> . ID
    (41) factor -> . NUMERO
    (42) factor -> . PARENTI expression PARENTD
    (43) factor -> . STRING

    ID              shift and go to state 44
    NUMERO          shift and go to state 45
    PARENTI         shift and go to state 46
    STRING          shift and go to state 47

    term                           shift and go to state 69
    factor                         shift and go to state 41

state 41

    (36) term -> factor .

    MULTI           reduce using rule 36 (term -> factor .)
    DIVIDIR         reduce using rule 36 (term -> factor .)
    IGUAL           reduce using rule 36 (term -> factor .)
    DISTINTO        reduce using rule 36 (term -> factor .)
    MENOR           reduce using rule 36 (term -> factor .)
    MAYOR           reduce using rule 36 (term -> factor .)
    MENORI          reduce using rule 36 (term -> factor .)
    MAYORI          reduce using rule 36 (term -> factor .)
    SUMA            reduce using rule 36 (term -> factor .)
    MENOS           reduce using rule 36 (term -> factor .)
    PUNTOCOMA       reduce using rule 36 (term -> factor .)
    LLAVEI          reduce using rule 36 (term -> factor .)
    PARENTD         reduce using rule 36 (term -> factor .)


state 42

    (34) addingOperator -> SUMA .

    ID              reduce using rule 34 (addingOperator -> SUMA .)
    NUMERO          reduce using rule 34 (addingOperator -> SUMA .)
    PARENTI         reduce using rule 34 (addingOperator -> SUMA .)
    STRING          reduce using rule 34 (addingOperator -> SUMA .)


state 43

    (35) addingOperator -> MENOS .

    ID              reduce using rule 35 (addingOperator -> MENOS .)
    NUMERO          reduce using rule 35 (addingOperator -> MENOS .)
    PARENTI         reduce using rule 35 (addingOperator -> MENOS .)
    STRING          reduce using rule 35 (addingOperator -> MENOS .)


state 44

    (40) factor -> ID .

    MULTI           reduce using rule 40 (factor -> ID .)
    DIVIDIR         reduce using rule 40 (factor -> ID .)
    IGUAL           reduce using rule 40 (factor -> ID .)
    DISTINTO        reduce using rule 40 (factor -> ID .)
    MENOR           reduce using rule 40 (factor -> ID .)
    MAYOR           reduce using rule 40 (factor -> ID .)
    MENORI          reduce using rule 40 (factor -> ID .)
    MAYORI          reduce using rule 40 (factor -> ID .)
    SUMA            reduce using rule 40 (factor -> ID .)
    MENOS           reduce using rule 40 (factor -> ID .)
    PUNTOCOMA       reduce using rule 40 (factor -> ID .)
    LLAVEI          reduce using rule 40 (factor -> ID .)
    PARENTD         reduce using rule 40 (factor -> ID .)


state 45

    (41) factor -> NUMERO .

    MULTI           reduce using rule 41 (factor -> NUMERO .)
    DIVIDIR         reduce using rule 41 (factor -> NUMERO .)
    IGUAL           reduce using rule 41 (factor -> NUMERO .)
    DISTINTO        reduce using rule 41 (factor -> NUMERO .)
    MENOR           reduce using rule 41 (factor -> NUMERO .)
    MAYOR           reduce using rule 41 (factor -> NUMERO .)
    MENORI          reduce using rule 41 (factor -> NUMERO .)
    MAYORI          reduce using rule 41 (factor -> NUMERO .)
    SUMA            reduce using rule 41 (factor -> NUMERO .)
    MENOS           reduce using rule 41 (factor -> NUMERO .)
    PUNTOCOMA       reduce using rule 41 (factor -> NUMERO .)
    LLAVEI          reduce using rule 41 (factor -> NUMERO .)
    PARENTD         reduce using rule 41 (factor -> NUMERO .)


state 46

    (42) factor -> PARENTI . expression PARENTD
    (31) expression -> . term
    (32) expression -> . addingOperator term
    (33) expression -> . expression addingOperator term
    (36) term -> . factor
    (37) term -> . term multiplyingOperator factor
    (34) addingOperator -> . SUMA
    (35) addingOperator -> . MENOS
    (40) factor -> . ID
    (41) factor -> . NUMERO
    (42) factor -> . PARENTI expression PARENTD
    (43) factor -> . STRING

    SUMA            shift and go to state 42
    MENOS           shift and go to state 43
    ID              shift and go to state 44
    NUMERO          shift and go to state 45
    PARENTI         shift and go to state 46
    STRING          shift and go to state 47

    expression                     shift and go to state 70
    term                           shift and go to state 39
    addingOperator                 shift and go to state 40
    factor                         shift and go to state 41

state 47

    (43) factor -> STRING .

    MULTI           reduce using rule 43 (factor -> STRING .)
    DIVIDIR         reduce using rule 43 (factor -> STRING .)
    IGUAL           reduce using rule 43 (factor -> STRING .)
    DISTINTO        reduce using rule 43 (factor -> STRING .)
    MENOR           reduce using rule 43 (factor -> STRING .)
    MAYOR           reduce using rule 43 (factor -> STRING .)
    MENORI          reduce using rule 43 (factor -> STRING .)
    MAYORI          reduce using rule 43 (factor -> STRING .)
    SUMA            reduce using rule 43 (factor -> STRING .)
    MENOS           reduce using rule 43 (factor -> STRING .)
    PUNTOCOMA       reduce using rule 43 (factor -> STRING .)
    LLAVEI          reduce using rule 43 (factor -> STRING .)
    PARENTD         reduce using rule 43 (factor -> STRING .)


state 48

    (19) statement -> MIENTRAS condition . LLAVEI statement LLAVED

    LLAVEI          shift and go to state 71


state 49

    (11) identList -> identList COMA identList .
    (11) identList -> identList . COMA identList

  ! shift/reduce conflict for COMA resolved as shift
    PUNTOCOMA       reduce using rule 11 (identList -> identList COMA identList .)
    COMA            shift and go to state 27

  ! COMA            [ reduce using rule 11 (identList -> identList COMA identList .) ]


state 50

    (10) identList -> ID ACTUALI NUMERO .

    PUNTOCOMA       reduce using rule 10 (identList -> ID ACTUALI NUMERO .)
    COMA            reduce using rule 10 (identList -> ID ACTUALI NUMERO .)


state 51

    (12) procDec1 -> procDec1 MOP ID PUNTOCOMA . block PUNTOCOMA
    (2) block -> . constDec1 varDec1 procDec1 statement
    (3) constDec1 -> . DR constAssignmentList PUNTOCOMA
    (4) constDec1 -> . empty
    (44) empty -> .

    DR              shift and go to state 4
    METRO           reduce using rule 44 (empty -> .)
    MOP             reduce using rule 44 (empty -> .)
    HF              reduce using rule 44 (empty -> .)
    ID              reduce using rule 44 (empty -> .)
    KNT             reduce using rule 44 (empty -> .)
    YF              reduce using rule 44 (empty -> .)
    MIENTRAS        reduce using rule 44 (empty -> .)
    PUNTOCOMA       reduce using rule 44 (empty -> .)

    block                          shift and go to state 72
    constDec1                      shift and go to state 3
    empty                          shift and go to state 5

state 52

    (15) statement -> ID ACTUALI expression . PUNTOCOMA
    (33) expression -> expression . addingOperator term
    (34) addingOperator -> . SUMA
    (35) addingOperator -> . MENOS

    PUNTOCOMA       shift and go to state 73
    SUMA            shift and go to state 42
    MENOS           shift and go to state 43

    addingOperator                 shift and go to state 59

state 53

    (22) statementList -> statementList statementList .
    (22) statementList -> statementList . statementList
    (21) statementList -> . statement
    (22) statementList -> . statementList statementList
    (14) statement -> . HF statementList GG
    (15) statement -> . ID ACTUALI expression PUNTOCOMA
    (16) statement -> . KNT STRING PUNTOCOMA
    (17) statement -> . YF condition LLAVEI statement LLAVED
    (18) statement -> . YF condition LLAVEI statement LLAVED WOLAN LLAVEI statement LLAVED
    (19) statement -> . MIENTRAS condition LLAVEI statement LLAVED
    (20) statement -> . empty
    (44) empty -> .

  ! shift/reduce conflict for HF resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for KNT resolved as shift
  ! shift/reduce conflict for YF resolved as shift
  ! shift/reduce conflict for MIENTRAS resolved as shift
  ! shift/reduce conflict for HF resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for KNT resolved as shift
  ! shift/reduce conflict for YF resolved as shift
  ! shift/reduce conflict for MIENTRAS resolved as shift
  ! reduce/reduce conflict for GG resolved using rule 22 (statementList -> statementList statementList .)
    GG              reduce using rule 22 (statementList -> statementList statementList .)
    HF              shift and go to state 21
    ID              shift and go to state 20
    KNT             shift and go to state 22
    YF              shift and go to state 23
    MIENTRAS        shift and go to state 24

  ! HF              [ reduce using rule 22 (statementList -> statementList statementList .) ]
  ! ID              [ reduce using rule 22 (statementList -> statementList statementList .) ]
  ! KNT             [ reduce using rule 22 (statementList -> statementList statementList .) ]
  ! YF              [ reduce using rule 22 (statementList -> statementList statementList .) ]
  ! MIENTRAS        [ reduce using rule 22 (statementList -> statementList statementList .) ]
  ! HF              [ reduce using rule 44 (empty -> .) ]
  ! ID              [ reduce using rule 44 (empty -> .) ]
  ! KNT             [ reduce using rule 44 (empty -> .) ]
  ! YF              [ reduce using rule 44 (empty -> .) ]
  ! MIENTRAS        [ reduce using rule 44 (empty -> .) ]
  ! GG              [ reduce using rule 44 (empty -> .) ]

    statementList                  shift and go to state 53
    statement                      shift and go to state 34
    empty                          shift and go to state 25

state 54

    (14) statement -> HF statementList GG .

    $end            reduce using rule 14 (statement -> HF statementList GG .)
    PUNTOCOMA       reduce using rule 14 (statement -> HF statementList GG .)
    GG              reduce using rule 14 (statement -> HF statementList GG .)
    HF              reduce using rule 14 (statement -> HF statementList GG .)
    ID              reduce using rule 14 (statement -> HF statementList GG .)
    KNT             reduce using rule 14 (statement -> HF statementList GG .)
    YF              reduce using rule 14 (statement -> HF statementList GG .)
    MIENTRAS        reduce using rule 14 (statement -> HF statementList GG .)
    LLAVED          reduce using rule 14 (statement -> HF statementList GG .)

